--- a/action.yml
+++ b/action.yml
@@ -34,7 +34,7 @@ inputs:
 
 runs:
   using: "docker"
-  image: "Dockerfile"
+  image: "docker://dgda/ts.sonarqube.action:2.1.9"
 
 branding:
   icon: 'check-square'
